# tree-sitter-postscript

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yaml
bindings/c/: tree-sitter-postscript.pc.in
bindings/c/tree_sitter/: tree-sitter-postscript.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_postscript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPostScriptTests/: TreeSitterPostScriptTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: comment.txt  composite.txt  numeric.txt  operator.txt  string.txt
